--- a/index.html
+++ b/index.html
@@ -37,11 +37,44 @@
                     </div>
                     <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
                         <span class="cart-info_icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
+                        <p class="mb-0 text-capitalize"><span id="item-count">2 </span>items - $ <span class="item-total">10.49</span>
+                        </p>
                     </div>
                 </div>
             </div>
         </nav>
         <!--End Nav-->
+
+
+
+        <!--Banner-->
+        <div class="container-fluid">
+            <div class="row max-height justify-content-center align-items-center">
+                <div class="col-10 mx-auto banner text-center">
+                    <h1 class="text-capitalize">Welcome to <strong class="banner-title">Marie's</strong></h1>
+                    <a href="#" class="btn banner-link text-uppercase my-2">Explore</a>
+                </div>
+                <!--cart-->
+                <div id="cart" class="cart">
+                    <!--Cart item-->
+                    <div class="cart-item d-flex justify-content-between text-capitalize my-3">
+                        <img src="./img-cart/cake-2.jpeg" alt="" class="img-fluid rounded-circle" id="item-img">
+                        <div class="item-text">
+                            <p id="cart-item-title" class="font-weight-bold mb0">Cart item</p>
+                            <span>$</span>
+                            <span id="cart-item-price" class="cart-item-price mb-0">10.99</span>
+                        </div>
+                        <a href="#" class="cart-item-remove">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </div>
+                    <!--end of cart item-->
+
+                    <!--cart item-->
+
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Optional JavaScript -->
