--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="img-container">
               <img src="img/sweets-1.jpeg" class="card-img-top store-img" alt="">
               <span class="store-item-icon">
-                <i class="fas fa-shopping-cart"></i>
+                <i class="fas fa-shopping-cart " data-goods="macaroons"></i>
               </span>
             </div>
             <div class="card-body">
@@ -458,5 +458,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
