--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     </div>
                     <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
                         <span class="cart-info_icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
-                        <p class="mb-0 text-capitalize"><span id="item-count">2 </span>items - $ <span class="item-total">10.49</span>
+                        <span id="shop">Start Shopping!</span>
+                        <p id="testCart" class="mb-0 text-capitalize hide"><span id="item-count">0 </span> items - $ <span class="item-total">0</span>
                         </p>
                     </div>
                 </div>
@@ -59,38 +60,14 @@
                 </div>
                 <!--cart-->
                 <div id="cart" class="cart">
-                    <!--Cart item-->
-                    <div class="cart-item d-flex justify-content-between text-capitalize my-3">
-                        <img src="./img-cart/cake-2.jpeg" alt="" class="img-fluid rounded-circle" id="item-img">
-                        <div class="item-text">
-                            <p id="cart-item-title" class="font-weight-bold mb0">Cart item</p>
-                            <span>$</span>
-                            <span id="cart-item-price" class="cart-item-price mb-0">10.99</span>
-                        </div>
-                        <a href="#" class="cart-item-remove">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                    </div>
-                    <!--end of cart item-->
 
-                    <!--cart item-->
-                    <div class="cart-item d-flex justify-content-between text-capitalize my-3">
-                        <img src="./img-cart/doughnut-2.jpeg" alt="" class="img-fluid rounded-circle" id="item-img">
-                        <div class="cart-item-text">
-                            <p id="cart-item-title" class="font-weight-bold mb-0">Cart item</p>
-                            <span>$</span>
-                            <span id="cart-item-price" class="cart-item-price mb-0">10.99</span>
-                        </div>
-                        <a href="#" id="cart-item-remove" class="cart-item-remove">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                    </div>
-                    <!--End of cart item-->
+
+
 
                     <!--cart total-->
                     <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
                         <h5>total</h5>
-                        <h5> $ <strong id="cart-total" class="font-weight-bold">10.00</strong> </h5>
+                        <h5> $ <strong id="cart-total" class="font-weight-bold">0</strong> </h5>
                     </div>
                     <!--end cart total-->
                     <!--cart buttons-->
